# docs/openapi.json
@@ -82,21 +82,6 @@
           "System"
         ]
       },
-      "FreeSlot": {
-        "type": "object",
-        "required": [
-          "field",
-          "window"
-        ],
-        "properties": {
-          "field": {
-            "$ref": "#/components/schemas/u8"
-          },
-          "window": {
-            "$ref": "#/components/schemas/TimeWindow"
-          }
-        }
-      },
       "FreeSlotWeek": {
         "type": "object",
         "required": [
@@ -109,20 +94,8 @@
             "format": "date-time"
           },
           "slots": {
-            "$ref": "#/components/schemas/FreeSlots"
+            "$ref": "#/components/schemas/Slots"
           }
-        }
-      },
-      "FreeSlots": {
-        "type": "array",
-        "items": {
-          "$ref": "#/components/schemas/FreeSlot"
-        }
-      },
-      "FreeSlotsWeek": {
-        "type": "array",
-        "items": {
-          "$ref": "#/components/schemas/FreeSlotWeek"
         }
       },
       "GetUserSlots": {
@@ -132,7 +105,7 @@
         ],
         "properties": {
           "data": {
-            "$ref": "#/components/schemas/FreeSlotsWeek"
+            "$ref": "#/components/schemas/SlotsWeek"
           }
         }
       },
@@ -175,6 +148,33 @@
               "format": "time::Weekday"
             }
           }
+        }
+      },
+      "Slot": {
+        "type": "object",
+        "required": [
+          "field",
+          "window"
+        ],
+        "properties": {
+          "field": {
+            "$ref": "#/components/schemas/u8"
+          },
+          "window": {
+            "$ref": "#/components/schemas/TimeWindow"
+          }
+        }
+      },
+      "Slots": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/Slot"
+        }
+      },
+      "SlotsWeek": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/FreeSlotWeek"
         }
       },
       "Time": {
@@ -276,6 +276,16 @@
           "id": {
             "type": "integer",
             "format": "int64"
+          },
+          "last_slots": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/Slots"
+              }
+            ]
           },
           "settings": {
             "$ref": "#/components/schemas/Settings"
